<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInActivity">

<!--头部间距-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

<!--主要内容-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="10">

<!--标题-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:fontFamily="cursive"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/sign"
                android:textSize="50sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />

        </LinearLayout>

<!--标题下间距-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

<!--主要内容部分-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="19">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/SignInMiracleStar"
                    android:textSize="14sp"
                    android:textColor="@color/sign"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

            </LinearLayout>


            <!--用户名输入框-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="@string/username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/username_icon"
                    app:endIconMode="clear_text"
                    app:counterEnabled="true"
                    app:boxStrokeColor="@color/sign"
                    android:textColorHint="@color/sign"
                    app:hintTextColor="@color/sign"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_in_username_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height"
                        android:inputType="text"
                        android:maxLength="16"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <!--密码输入框-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="@string/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/password_icon"
                    app:endIconMode="password_toggle"
                    app:counterEnabled="true"
                    app:boxStrokeColor="@color/sign"
                    android:textColorHint="@color/sign"
                    app:hintTextColor="@color/sign"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_in_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height"
                        android:inputType="textPassword"
                        android:maxLength="40"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <!--验证码输入框-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:hint="@string/Captcha"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:startIconDrawable="@drawable/captcha_icon"
                        app:counterEnabled="true"
                        app:endIconMode="clear_text"
                        app:boxStrokeColor="@color/sign"
                        android:textColorHint="@color/sign"
                        app:hintTextColor="@color/sign"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_in_captcha_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/input_height"
                            android:maxLength="8"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:paddingTop="5dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="4">

                        <ImageView
                            android:id="@+id/sign_in_captcha_image"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/input_height"
                            android:src="@mipmap/captcha"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <!--登录按钮-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/sign_in_go_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/input_height"
                    android:layout_weight="8"
                    android:text="@string/go"
                    android:textSize="18sp"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/sign"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/sign_in_registered_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registered"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:textColor="@color/sign"
                android:textColorLink="@color/sign"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>